Don't crash trying to load symbols from striped file.

PR:		bin/167361
Submitted by:	Slawa Olhovchenkov <slw zxy.spb.ru>
Silence from:	jkoshy

Former-commit-id: dea3423fe492cc1b185be63d92722c01f8d194b9